force-app/main/default/objects/FEC_Case_Refund_Details__c/FEC_Case_Refund_Details__c.object-meta.xml
<CustomObject>
    <description>Thông tin hoàn tiền của case</description>
    <label>Case Refund Details</label>
    <nameField>
        <displayFormat>CRD - {0}</displayFormat>
        <label>Case Refund Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Refund Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>