force-app/main/default/objects/FEC_Case_Refund_Details__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Refund Details</relationshipLabel>
    <relationshipName>Case_Refund_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>