force-app/main/default/objects/FEC_Case_Refund_Details__c/fields/FEC_Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Receipt_Amount__c</fullName>
    <description>Số tiền thanh toán</description>
    <label>Receipt Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>