force-app/main/default/objects/FEC_Case_Refund_Details__c/fields/FEC_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Receipt_Date__c</fullName>
    <description>Ngày thanh toán</description>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>