force-app/main/default/objects/FEC_Case_Refund_Details__c/fields/FEC_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transaction_Number__c</fullName>
    <description>Số giao dịch</description>
    <label>Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>